Shorten padding to avoid wrapping on iPad

--- a/gears.css
+++ b/gears.css
@@ -24,7 +24,7 @@ h1 {
 }
 th, td {
   border: 1px solid #ccc;
-  padding: 0 1em;
+  padding: 0 0.25em;
 }
 th {
   font-weight: bolder;
